# pqc-mobile-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  PqcCore.podspec  README.md  SECURITY.md  build.rs  deny.toml  release-please-config.json  rust-toolchain.toml  uniffi.toml
.github/: dependabot.yml
.github/swiftpm-template/: Package.swift.in  README.md
.github/workflows/: android.yml  check.yml  ios.yml  release.yml
Sources/PqcCore/: PqcConfig+Defaults.swift  PqcURLProtocol.swift  pqc.swift
android/: AndroidManifest.xml  README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/kotlin/io/github/sriharsha_y/pqc/: PqcConfigDefaults.kt  PqcInterceptor.kt
android/src/main/kotlin/io/github/sriharsha_y/pqc/android/: PqcAndroidInit.kt
android/src/main/kotlin/uniffi/pqc/android/: PqcAndroidInit.kt
docs/: android.md  ios.md
examples/NativeAndroid/: README.md  build.gradle.kts  settings.gradle.kts
examples/NativeAndroid/app/: build.gradle.kts
examples/NativeAndroid/app/src/main/: AndroidManifest.xml
examples/NativeAndroid/app/src/main/java/io/github/sriharsha_y/pqcsample/: MainActivity.kt  SampleApplication.kt
examples/NativeAndroid/app/src/main/res/values/: strings.xml
examples/NativeIos/: README.md
examples/NativeIos/NativeIos/: ContentView.swift  Info.plist  NativeIosApp.swift
examples/NativeIos/NativeIos.xcodeproj/: project.pbxproj
examples/NativeIos/NativeIos.xcodeproj/xcshareddata/xcschemes/: NativeIos.xcscheme
examples/RnSample/: App.tsx  README.md  package-lock.json  package.json
examples/RnSample/android/: settings.gradle
examples/RnSample/android/app/: build.gradle  proguard-rules.pro
examples/RnSample/android/app/src/main/java/com/rnsample/: MainApplication.kt  PqcInterceptor.kt
examples/RnSample/ios/: Podfile
examples/RnSample/ios/RnSample/: AppDelegate.mm  Info.plist  PqcURLProtocol.swift
examples/RnSample/ios/RnSample.xcodeproj/: project.pbxproj
examples/RnSample/scripts/: wire-pqc.sh
ios/: README.md
scripts/: build-android.sh  build-ios.sh  setup.sh
src/: android_init.rs  cache.rs  client.rs  config.rs  error.rs  kx_tracker.rs  lib.rs  pinning.rs  pqc.udl  tls.rs  types.rs
tests/: cache_final_url.rs  smoke.rs
