[package]
name = "pqc_client"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
description = "Post-Quantum TLS HTTPS client for iOS and Android (native + React Native) via UniFFI"
repository = ""

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "pqc_client"

# UniFFI's recommended pattern: each crate provides its own uniffi-bindgen
# binary that just calls uniffi::uniffi_bindgen_main(). Run via
# `cargo run --features cli --bin uniffi-bindgen -- generate ...`.
#
# `required-features = ["cli"]` is the critical bit: without it, cross-
# compiling the library to iOS / Android pulled the entire uniffi_bindgen
# tree (clap, goblin, the whole CLI) into the static archive, ballooning
# the iOS arm64 .a from ~50 MB to ~90 MB. Gating the bin on the feature
# means `cargo build --release --target aarch64-apple-ios` never asks for
# `cli` and never links those host-only tools into the iOS lib.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[features]
default = []
# Enable host build of the uniffi-bindgen binary. Adds clap + goblin +
# uniffi_bindgen to the dep tree — never wanted in mobile cross-compiles.
cli = ["uniffi/cli"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP client (rustls backend, no native-tls)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-manual-roots-no-provider",
    "http2",
    "gzip",
    "brotli",
    "cookies",
    "stream",
] }

# TLS with post-quantum support
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-post-quantum = "0.2"
rustls-platform-verifier = "0.5"

# FIPS-validated crypto provider (ML-KEM, SHA-256 for SPKI hashing)
aws-lc-rs = { version = "1.13", default-features = false, features = ["aws-lc-sys"] }

# Cert parsing for SPKI extraction (cert pinning)
x509-parser = "0.16"
base64 = "0.22"

# Error + logging
thiserror = "2"
log = "0.4"

# UniFFI for cross-language bindings (Kotlin/Swift). `cli` is NOT enabled
# here — it's gated behind the local `cli` feature flag, which only the
# uniffi-bindgen binary build opts into. See the [[bin]] section above.
uniffi = { version = "0.29", features = ["tokio"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
# Self-signed certs for pinning unit tests
rcgen = "0.13"

# Release profile tuned for mobile binary size.
#
# panic strategy is left as "unwind" (rustc default) rather than "abort"
# because cargo test --release in CI relies on the test harness catching
# panics to report which test failed. With panic="abort", a panicking
# assertion would SIGABRT the test binary mid-run — non-zero exit, but
# zero failed tests in the summary. The size benefit of abort on these
# static libs (~50 KB) doesn't outweigh the lost diagnostic.
[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
codegen-units = 1
strip = true
overflow-checks = false

# Faster dev iteration
[profile.dev]
opt-level = 1
debug = true
