[package]
name = "pqc_client"
version = "0.5.4"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
description = "Post-Quantum TLS HTTPS client for iOS and Android (native + React Native) via UniFFI"
repository = ""

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "pqc_client"

# UniFFI's recommended pattern: each crate provides its own uniffi-bindgen
# binary that just calls uniffi::uniffi_bindgen_main(). Run via
# `cargo run --features cli --bin uniffi-bindgen -- generate ...`.
#
# `required-features = ["cli"]` is the critical bit: without it, cross-
# compiling the library to iOS / Android pulled the entire uniffi_bindgen
# tree (clap, goblin, the whole CLI) into the static archive, ballooning
# the iOS arm64 .a from ~50 MB to ~90 MB. Gating the bin on the feature
# means `cargo build --release --target aarch64-apple-ios` never asks for
# `cli` and never links those host-only tools into the iOS lib.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[features]
default = []
# Enable host build of the uniffi-bindgen binary. Adds clap + goblin +
# uniffi_bindgen to the dep tree — never wanted in mobile cross-compiles.
cli = ["uniffi/cli"]
# Opt-in RFC 9111 HTTP response cache (off by default). Pulls the
# http-cache stack + cacache (disk) + moka (iOS memory tier). Gated like
# `cli`: the runtime `PqcConfig.enable_cache` only does anything when this
# was compiled in. Mobile release builds enable it explicitly via the build
# scripts; the default (feature-free) build stays lean. See src/cache.rs.
cache = [
    "dep:http-cache-reqwest",
    "dep:http-cache",
    "dep:http-cache-semantics",
    "dep:reqwest-middleware",
    "dep:cacache",
    "dep:moka",
    "dep:postcard",
    "dep:serde",
    "dep:async-trait",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP client (rustls backend, no native-tls)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-manual-roots-no-provider",
    "http2",
    "gzip",
    "brotli",
    "cookies",
    "stream",
] }

# TLS with post-quantum support
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-post-quantum = "0.2"
rustls-platform-verifier = "0.5"

# Crypto provider (ML-KEM, SHA-256 for SPKI hashing). aws-lc-rs is built on
# AWS-LC, which is FIPS-capable via the crate's "fips" feature (the validated
# AWS-LC-FIPS module). This build intentionally uses the standard, non-FIPS
# "aws-lc-sys" configuration — enabling "fips" requires a frozen validated
# source rev with a narrower platform matrix (not all Android/iOS targets).
aws-lc-rs = { version = "1.13", default-features = false, features = ["aws-lc-sys"] }

# Cert parsing for SPKI extraction (cert pinning)
x509-parser = "0.16"
base64 = "0.22"

# Error + logging
thiserror = "2"
log = "0.4"

# UniFFI for cross-language bindings (Kotlin/Swift). `cli` is NOT enabled
# here — it's gated behind the local `cli` feature flag, which only the
# uniffi-bindgen binary build opts into. See the [[bin]] section above.
uniffi = { version = "0.29", features = ["tokio"] }

# ----- Optional HTTP response cache (the `cache` feature) -----
# Versions pinned to the highest that keep our rust-version = 1.81 floor
# (http-cache 0.21 / http-cache-reqwest 0.16 require rustc 1.82). The RFC
# 9111 semantics come from http-cache-semantics (the same engine the whole
# http-cache stack is built on); we bring cacache (disk) + moka (iOS memory
# tier) in directly and ship our own CacheManager in src/cache.rs (bounded,
# byte-evicting, composite mem+disk) instead of the bundled managers, so
# http-cache(-reqwest) default-features are off.
http-cache-reqwest = { version = "0.15", default-features = false, optional = true }
http-cache = { version = "0.20", default-features = false, optional = true }
http-cache-semantics = { version = "2.1", features = ["serde"], optional = true }
reqwest-middleware = { version = "0.4", optional = true }
cacache = { version = "13", default-features = false, features = ["tokio-runtime"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
# Compact serde serializer for cache records. postcard (maintained) rather than
# bincode 1.x, which RUSTSEC-2025-0141 flags unmaintained (no patched version).
postcard = { version = "1", default-features = false, features = ["use-std"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
async-trait = { version = "0.1", optional = true }

# Android-only: rustls-platform-verifier needs a JNI handshake from the
# app's Application.onCreate to capture the Android Context so it can
# reach KeyStore / NetworkSecurityConfig classes at handshake time.
# Without this, the first request throws
#   io.github.sriharsha_y.pqc.InternalException: Expect rustls-platform-verifier to be initialized
# We expose a tiny JNI shim (src/android_init.rs) that consumers call
# from MainApplication.onCreate. iOS has no equivalent — Apple's
# Security framework is process-wide and discovered via dlopen.
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
# Self-signed certs for pinning unit tests
rcgen = "0.13"
http = "1.4.1"

# Release profile tuned for mobile binary size.
#
# panic strategy is left as "unwind" (rustc default) rather than "abort"
# because cargo test --release in CI relies on the test harness catching
# panics to report which test failed. With panic="abort", a panicking
# assertion would SIGABRT the test binary mid-run — non-zero exit, but
# zero failed tests in the summary. The size benefit of abort on these
# static libs (~50 KB) doesn't outweigh the lost diagnostic.
[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
codegen-units = 1
strip = true
overflow-checks = false

# Faster dev iteration
[profile.dev]
opt-level = 1
debug = true
