[package]
name = "pqc_client"
version = "0.10.1"
edition = "2021"
# Bumped 1.81 → 1.88 for http-cache 1.0.0-alpha.6, which uses RPITIT
# (return-position impl Trait in trait) on StreamingCacheManager — a
# language feature stabilized in 1.75 but with full trait-object dyn
# compatibility in 1.85+; alpha.6 declares 1.88. The runtime cost is
# zero; the cost is just that contributors need a modern toolchain.
rust-version = "1.88"
license = "Apache-2.0"
description = "Post-Quantum TLS HTTPS client for iOS and Android (native + React Native) via UniFFI"
repository = ""

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "pqc_client"

# UniFFI's recommended pattern: each crate provides its own uniffi-bindgen
# binary that just calls uniffi::uniffi_bindgen_main(). Run via
# `cargo run --features cli --bin uniffi-bindgen -- generate ...`.
#
# `required-features = ["cli"]` is the critical bit: without it, cross-
# compiling the library to iOS / Android pulled the entire uniffi_bindgen
# tree (clap, goblin, the whole CLI) into the static archive, ballooning
# the iOS arm64 .a from ~50 MB to ~90 MB. Gating the bin on the feature
# means `cargo build --release --target aarch64-apple-ios` never asks for
# `cli` and never links those host-only tools into the iOS lib.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[features]
default = []
# Enable host build of the uniffi-bindgen binary. Adds clap + goblin +
# uniffi_bindgen to the dep tree — never wanted in mobile cross-compiles.
cli = ["uniffi/cli"]
# Opt-in RFC 9111 HTTP response cache (off by default). Pulls the
# http-cache stack + cacache (disk) + moka (iOS memory tier). Gated like
# `cli`: the runtime `PqcConfig.enable_cache` only does anything when this
# was compiled in. Mobile release builds enable it explicitly via the build
# scripts; the default (feature-free) build stays lean. See src/cache.rs.
cache = [
    "dep:http-cache",
    "dep:http-cache-reqwest",
    "dep:reqwest-middleware",
    "dep:cacache",
    "dep:moka",
    "dep:postcard",
    "dep:serde",
    "dep:http-cache-semantics",
    # Body + streaming machinery for our StreamingCacheManager impl.
    # (bytes is now a required dep — streaming uploads need it too.)
    "dep:http-body",
    "dep:http-body-util",
    "dep:http",
    "dep:pin-project-lite",
    "dep:futures-util",
]
# DEBUG-ONLY: pulls android_logger so Rust `log::debug!` / `log::warn!` calls
# surface in logcat. Enable for repro builds only:
#   PQC_CARGO_FEATURES="cache,android-logs" make android
# Never enable on release builds — extra dep + verbose logs.
android-logs = ["dep:android_logger"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP client (rustls backend, no native-tls).
#
# reqwest 0.13 made rustls the default TLS backend and rustls-platform-
# verifier the default trust source — both already the case for our prior
# 0.12 config, so the change is mostly a feature-rename. We use
# `rustls-no-provider` (renamed from `rustls-tls-manual-roots-no-provider`)
# so reqwest doesn't install its own CryptoProvider — we install
# rustls-post-quantum's provider via `use_preconfigured_tls`.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "http2",
    "gzip",
    "brotli",
    "cookies",
    "stream",
    # Pulls in hickory-resolver; only ACTIVE at runtime when
    # PqcConfig.dns_resolver = Hickory. System resolver remains default.
    # Trade-off: enables RFC 8305 Happy Eyeballs (v4/v6 racing) but
    # bypasses Android Private DNS / DoT — see DnsResolver doc.
    "hickory-dns",
] }

# TLS with post-quantum support
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-post-quantum = "0.2"
# Bumped 0.5 → 0.7 to satisfy reqwest 0.13's transitive requirement
# (`rustls-platform-verifier >=0.6.0, <0.8.0`). 0.7's API moves audited
# in src/tls.rs; functionality unchanged.
rustls-platform-verifier = "0.7"

# Crypto provider (ML-KEM, SHA-256 for SPKI hashing). aws-lc-rs is built on
# AWS-LC, which is FIPS-capable via the crate's "fips" feature (the validated
# AWS-LC-FIPS module). This build intentionally uses the standard, non-FIPS
# "aws-lc-sys" configuration — enabling "fips" requires a frozen validated
# source rev with a narrower platform matrix (not all Android/iOS targets).
aws-lc-rs = { version = "1.13", default-features = false, features = ["aws-lc-sys"] }

# Cert parsing for SPKI extraction (cert pinning)
x509-parser = "0.16"
base64 = "0.22"

# Error + logging
thiserror = "2"
log = "0.4"

# UniFFI for cross-language bindings (Kotlin/Swift). `cli` is NOT enabled
# here — it's gated behind the local `cli` feature flag, which only the
# uniffi-bindgen binary build opts into. See the [[bin]] section above.
uniffi = { version = "0.29", features = ["tokio"] }

# ----- Optional HTTP response cache (the `cache` feature) -----
# http-cache pinned EXACT to 1.0.0-alpha.6 — pre-1.0. This is the first
# release with the `StreamingCacheManager` trait + `StreamingCache`
# middleware (streaming is unconditional in alpha.6; no feature flag).
# We implement `StreamingCacheManager` ourselves in src/cache.rs against
# cacache + moka + postcard (NOT the bundled `StreamingManager`, which
# uses redb + raw tokio::fs files internally — we keep our content-
# addressable cacache layout).
#
# DO NOT auto-bump. Audit the trait shape before any version change.
# Upstream alphas have shipped breaking API changes routinely; alpha.6
# was declared as the last alpha before 1.0 in upstream issue #141
# (2026-03-05), so 1.0 may be next, but no timeline is published.
http-cache = { version = "=1.0.0-alpha.6", default-features = false, features = ["url-standard", "streaming"], optional = true }
http-cache-reqwest = { version = "=1.0.0-alpha.6", default-features = false, features = ["streaming"], optional = true }
reqwest-middleware = { version = "0.5", optional = true }

# Storage primitives. Same as before — these implement our
# StreamingCacheManager. cacache is the content-addressable disk store
# (Writer is AsyncWrite with atomic commit + drop cleanup); moka is the
# in-memory hot tier; postcard encodes our metadata records.
cacache = { version = "13", default-features = false, features = ["tokio-runtime"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
postcard = { version = "1", default-features = false, features = ["use-std"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
# CachePolicy comes from http-cache-semantics; http-cache uses it
# internally but doesn't re-export the type. Pin to 3.x to match the
# version http-cache 1.0.0-alpha.6 uses internally — otherwise our
# CachePolicy values can't round-trip through the cache trait.
http-cache-semantics = { version = "3", features = ["serde"], optional = true }

# Body / streaming primitives needed by the StreamingCacheManager trait
# (alpha.6 returns Response<Self::Body> where Body: http_body::Body).
# Pinned to the versions http-cache alpha.6 itself uses.
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }

# Streaming-upload primitives. Required (not feature-gated) — used by
# `client.rs::BodyProviderStream` to bridge foreign-implemented
# `BodyProvider` into reqwest::Body::wrap_stream. `bytes` is already
# transitively present via reqwest; pinning it explicitly so we don't
# silently drift if reqwest drops it. `futures-core` is the minimal
# Stream trait surface (no executor) — adds ~negligible bytes to the
# mobile archive.
bytes = "1"
futures-core = { version = "0.3", default-features = false }

# Android-only JNI shim wiring. `jni` lets src/android_init.rs export the
# `nativeInit` symbol that `PqcAndroidInit` calls from Application.onCreate
# to hand the Context to TWO independent globals — rustls-platform-verifier
# (TLS trust) and ndk-context (read by hickory-resolver for DNS). Same
# `InternalException: android context was not initialized` from both if
# either is skipped. iOS has no equivalent — Apple's Security framework is
# process-wide.
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22", default-features = false }
ndk-context = "0.1"
# Optional logcat backend for the `log` crate; enabled by the `android-logs`
# feature, which is off by default. Repro/debug builds only.
android_logger = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
# Self-signed certs for pinning unit tests
rcgen = "0.13"
http = "1.4.1"
# Cache unit tests need temp directories
tempfile = "3"

# Release profile tuned for mobile binary size.
#
# panic strategy is left as "unwind" (rustc default) rather than "abort"
# because cargo test --release in CI relies on the test harness catching
# panics to report which test failed. With panic="abort", a panicking
# assertion would SIGABRT the test binary mid-run — non-zero exit, but
# zero failed tests in the summary. The size benefit of abort on these
# static libs (~50 KB) doesn't outweigh the lost diagnostic.
[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
codegen-units = 1
strip = true
overflow-checks = false

# Faster dev iteration
[profile.dev]
opt-level = 1
debug = true
